<resources>
    <string name="app_name">RoadRunner</string>
    <string name="title_activity_maps">RoadRunner</string>
    <string name="child_exception">layout must have child. Only one child.</string>
    <string name="waiting_msg">Waiting for new Order</string>
    <string name="login">Login</string>
    <string name="enter_user_name">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="isNetwork">Please check internet connection.</string>
    <string name="start_navigate">Start navigating</string>
    <string name="new_pickup">You have a new pick up</string>
    <string name="driver_boy">RoadRunner Delivery</string>
    <string name="location">Location</string>
    <string name="company">Enter company name</string>
    <string name="flat_no">Flat No. / House No.</string>
    <string name="postcode">Postal code (optional)</string>
    <string name="address">Address</string>
    <string name="order">Order</string>
    <string name="contact_number">Contact number</string>
    <string name="enable_live">Enable live tracking</string>
    <string name="live_track">Live Tracking</string>
    <string name="ok">OK</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="invalid_user">Please enter valid user name or password</string>
    <string name="broken">Something broken</string>
    <string name="user">RoadRunner Consumer</string>
</resources>
