<?xml version="1.0" encoding="utf-8"?><!--this layout is using for login screen
it's contains email panel, password panel and login button -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="28dp"
            android:paddingRight="28dp">


            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="6dp"
                android:background="@drawable/edit_draw"
                android:layout_gravity="left"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/hint_color"
                android:gravity="center_vertical"
                android:text="9173824620"
                android:hint="@string/enter_user_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="left"
                android:padding="6dp"
                android:text="111111"
                android:inputType="numberPassword"
                android:background="@drawable/edit_draw"
                android:layout_marginBottom="24dp"
                android:textColorHint="@color/hint_color"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_password"
                android:textColor="@color/black"
                />


            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="32dp"
                android:text="@string/login"
                android:textSize="18dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>